# nursing-sheduler

./: .dockerignore  .gitignore  .mise.toml  DOLT_REMOTE.md  Makefile  README.md  lefthook.yml  manifest
core/: pyproject.toml  requirements.txt
core/nurse_scheduling/: __init__.py  constants.py  context.py  exporter.py  group_map.py  model_build_stats.py  models.py  preference_types.py  scheduler.py  serve.py  solver_ortools_cp_sat.py
core/nurse_scheduling/server/: __init__.py  app.py  canonical.py  config.py  diagnostic.py  errors.py  event_cursor.py  job_store.py  (+6 more)
core/scripts/: README.md  __init__.py  solver_capability_probe.py
core/tests/: conftest.py  export_test_helper.py  server_support.py  solver_test_utils.py  test_app_version.py  test_export_formatting.py  test_export_xlsx_ortools_cp_sat.py  test_exporter.py  test_hours_contract_field.py  test_hours_contract_validation.py  test_leave_daystate.py  test_loader.py  test_models_validation.py  test_process_executor.py  test_public_diagnostic.py  test_real_run_schedule.py  test_real_solver_capability_probe.py  test_runner_termination.py  test_scheduler.py  test_serve.py  test_serve_curl.sh  test_server_api.py  test_server_backend_parity.py  test_server_controller_retry.py  test_server_identity.py  test_server_lifecycle_gates.py  test_server_replay.py  test_server_scheduling_input.py  test_server_store_contract.py  test_server_worker_loss.py  test_server_worker_loss_multiprocess.py  test_shift_type_covering_preference.py  test_shift_type_working_time.py  test_solver_interface.py  test_solver_ortools_cp_sat.py
(+1201 files in other folders)
